Version 0.3.3
=============

05.09.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Introduced ajax action for following users
  * Cached and optimized user followings
  * Bugfixes:
    - Fixed the bug which prevented creating lists
    - Initialize the selected filter for trending topics on refresh

04.09.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Created simple interface for switching between filters
  * Added follow button 

31.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Switched from httpauth to OAuth

29.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Defined scopes and methods for filtering tags
  * Implemented the functionality for switching between filters

28.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Removed the @anywhere script
  * Introduced method for checking if user is followed
  

22.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Automated hashtag linking

21.08.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Integration with Newrelic RPM
  * Removed 'Cyrillizer' from vendor, loading it as a gem

Version 0.3.2
=============

26.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Corrected the wrong syntax for cookie expiration (set to 365 days)
  * Bringing back the @anywhere script

18.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Fixed the issue with edit today topic
  * Error message when twitter fails to respond
  * Introduced twitter's @anywhere script
  * Some bugfixes

17.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Proper HTML codes instead of '<' and '>' chars
  * Moved the user counter to navigation menu
  * Selected tabs are now remembered (using cookies)
  * Added number of users per category and tag

14.07.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Temporarily disabled code for the 3rd party feedback widget
  * Fixed the wrong link on tag view screen

Version 0.3.1